2007-01-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle missing place in LDS ord
	* src/DataViews/_PersonView.py: optimization
	* src/ViewManager.py: remove double build call
	* src/DisplayModels/_PeopleModel.py: optimization

2007-01-17 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py: fast implementation

2007-01-16 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/Filters/_GenericFilter.py: file get_cursor funcs
	
2007-01-16  Don Allingham  <don@gramps-project.org>

	* src/DataViews/_PersonView.py (PersonView): disable cursor
	callbacks

2007-01-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Editors/*: Switch notebook tabs during DnD

2007-01-15  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: use watch cursor on node expand
	* src/GrampsDb/_ReadGedcom.py: handle empty repo instances
	* src/plugins/TestCaseGenerator.py: fix typo
	* src/DisplayState.py: manage watch cursors better (don't set twice)
	* src/DisplayModels/_PeopleModel.py: maintain backref hash table for quick access 
	to iter to node mappings at the top level.

2007-01-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ViewManager.py: Switch pages during DnD; Set active sidebar
	button properly

2007-01-15  Don Allingham  <don@gramps-project.org>

	* src/ViewManager.py (check_for_portability_problems): simplify the
	warning message. Fix typo.
	* src/DateEdit.py: make "bad date" translatable.

2007-01-14  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: 0000627: Relationship graph PDF papersize problems.
	    Use ghostscript instead of epstopdf

2007-01-13  Don Allingham  <don@gramps-project.org>
	* po/gramps.pot: update

2007-01-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: 0000705: font size in relationship graph

2007-01-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_NoteTab.py: beginning of formatted tabs
