@@ -1,3 +1,7 @@
+2007-01-16  Alex Roitman  <shura@gramps-project.org>
+	* src/NameDisplay.py (set_name_format): Use hard-coded methods for
+	the pre-set name displays formats.
+
 2007-01-16  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: handle missing place in LDS ord
 	* src/DataViews/_PersonView.py: optimization
